--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,7 @@ body {
     background: linear-gradient(180deg, #9f6bff, #6119cc);
 }
 
-.stopwatch {
+#stopwatch {
     background-color: #262626;
     padding: 2rem;
     border-radius: 8px;
